Issue #9675: better error handling in bsddb